add everyone's photos

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ $(document).ready(function(){
 
 		<p class="content content2">
 		We embrace diversity and individuality &mdash; in background, talent, and identity.<br><br>
-		Our team members hail from all over the world, including countries such as India, Germany, Japan, and Hungary. We're data scientists, Machine Learning experts, business developers, UX designers, and much more.<br><br>
+		Our team members hail from all over the world, including countries such as Germany, China, Japan, India, and Canada. We're Data Scientists, Machine Learning experts, Business Developers, UX designers, and much more.<br><br>
 		The core of the Innovation Center is its people, and together we make the ICSV, ICSV.</p>
 	</div>
 
@@ -298,7 +298,7 @@ $(document).ready(function(){
 <div id="featured" class="section">
 <div class="row">
 	
-		<h1 class="title"><span class="keyword-featured">featured</span> speakers</span></h1>
+		<h1 class="title"><span class="keyword-featured">featured</span> speaker</span></h1>
 
 		<div class="col-sm-12 col-xs-12">
 		<div class="col-md-2"></div>
@@ -342,7 +342,7 @@ $(document).ready(function(){
 					<h4 class="agenda-time">11:30 AM - 12:00 PM </h4>
 					<h4 class="agenda-event">Doing the Boring Stuff Can Actually Bring Money - Learn how SAP's Machine Learning Platform and Application Help Create the Intelligent Enterprise</h4>
 					<h5 class="agenda-location  agenda-location2">small dive</h5>
-					<h5 class="agenda-person">Peter Weigt</h5>
+					<h5 class="agenda-person">Peter Weigt, Piyush Chandra</h5>
 				</div>
 				<!-- this doesn't display until certain resolutions -->
 				<div class="agenda-content dive-for-scale">
@@ -380,7 +380,7 @@ $(document).ready(function(){
 					<h4 class="agenda-time">11:30 AM - 12:00 PM </h4>
 					<h4 class="agenda-event">The User Experience Approach when Designing Machine Learning Applications</h4>
 					<h5 class="agenda-location  agenda-location2">small dive</h5>
-					<h5 class="agenda-person">Sajid Sayed, Lucia Melgarejo, Shae Maeda</h5>
+					<h5 class="agenda-person">Sajid Saiyed, Lucia Melgarejo, Shae Maeda</h5>
 				</div>
 			</div>
 
@@ -457,15 +457,6 @@ $(document).ready(function(){
 	<!-- <div class="col-md-3"></div> -->
 	<!-- <div class="col-md-12"> -->
 		<h1 class="title">who will be <span class="keyword-speakers">speaking</span></h1>
-		<!-- one speaker -->
-		<div class="col-md-4 col-sm-4 col-xs-6">
-				<div class="speaker-container">
-						<img src="assets/shae.jpg" class="speaker-img img-responsive">
-						<h4 class="speaker-name">Shae Maeda</h4>
-						<h5 class="speaker-title"><span class="speaker-position">UX Designer</span><br><span class="speaker-session"></span></h5>
-			</div>
-		</div>
-		<!-- one speaker -->
 		<div class="col-md-4 col-sm-4 col-xs-6">
 				<div class="speaker-container">
 						<img src="assets/peter_head.jpg" class="speaker-img img-responsive">
@@ -473,12 +464,102 @@ $(document).ready(function(){
 						<h5 class="speaker-title"><span class="speaker-position">Head of ICSV</span><br><span class="speaker-session"></span></h5>
 			</div>
 		</div>
-		<!-- one speaker -->
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/head_wafaa.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Wafaa Sabil</h4>
+						<h5 class="speaker-title"><span class="speaker-position">ux design expert</span><br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/karsten_head.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Karsten Schmidt</h4>
+						<h5 class="speaker-title"><span class="speaker-position">Software Engineer</span> <br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
+</div>
+
+<div class="row">
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/frank_head.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Frank Blechschmidt</h4>
+						<h5 class="speaker-title"><span class="speaker-position">Software Engineer</span><br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/head_rene.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Ren&#233; Springer</h4>
+						<h5 class="speaker-title"><span class="speaker-position">Software Engineer</span><br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/head_alex.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Alex Schaefer</h4>
+						<h5 class="speaker-title"><span class="speaker-position">Software Engineer</span> <br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
+</div>
+
+<div class="row">
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/head_sajid.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Sajid Saiyed</h4>
+						<h5 class="speaker-title"><span class="speaker-position">Senior UX Expert</span><br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/lucia_head.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Lucia Melgarejo</h4>
+						<h5 class="speaker-title"><span class="speaker-position">UX Designer</span><br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/shae.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Shae Maeda</h4>
+						<h5 class="speaker-title"><span class="speaker-position">UX Designer</span> <br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
+</div>
+
+<div class="row">
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/head_karthik.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Karthik Uppuluri</h4>
+						<h5 class="speaker-title"><span class="speaker-position">Data Scientist</span><br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
 		<div class="col-md-4 col-sm-4 col-xs-6">
 				<div class="speaker-container">
 						<img src="assets/till_head.jpg" class="speaker-img img-responsive">
 						<h4 class="speaker-name">Till Pieper</h4>
-						<h5 class="speaker-title"><span class="speaker-position">Lead of Explore Team</span> <br><span class="speaker-session"></span></h5>
+						<h5 class="speaker-title"><span class="speaker-position">Lead of Explore Team</span><br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/head_anil.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Anil Babu Ankisettipalli</h4>
+						<h5 class="speaker-title"><span class="speaker-position"></span> <br><span class="speaker-session"></span></h5>
+			</div>
+		</div>
+</div>
+
+<div class="row">
+		<div class="col-md-4 col-sm-4 col-xs-6">
+		</div>
+		<div class="col-md-4 col-sm-4 col-xs-6">
+				<div class="speaker-container">
+						<img src="assets/head_judith.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Judith Li</h4>
+						<h5 class="speaker-title"><span class="speaker-position">Data Scientist</span><br><span class="speaker-session"></span></h5>
 			</div>
 		</div>
 </div>
