update wafaa's photo

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ $(document).ready(function(){
 		</div>
 		<div class="col-md-4 col-sm-4 col-xs-4">
 				<div class="speaker-container">
-						<img src="assets/head_wafaa.jpg" class="speaker-img img-responsive">
+						<img src="assets/wafaa.jpg" class="speaker-img img-responsive">
 						<h4 class="speaker-name">Wafaa Sabil</h4>
 						<h5 class="speaker-title"><span class="speaker-position">ux design expert</span><br><span class="speaker-session"></span></h5>
 			</div>
