--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ $(document).ready(function(){
 				<h3 class="agenda-title">@ Library</h3>
 				<div class="agenda-content">
 					<h4 class="agenda-time">10:00 AM - 11:00 AM </h4>
-					<h4 class="agenda-event">ML101: Is Machine Learning Controlling Your Life</h4>
+					<h4 class="agenda-event">ML101: Is Machine Learning Controlling Your Life?</h4>
 					<h5 class="agenda-location  agenda-location2">small dive</h5>
 					<h5 class="agenda-person">Karsten Schmidt, Frank Blechschmidt</h5>
 				</div>
@@ -374,7 +374,7 @@ $(document).ready(function(){
 					<h4 class="agenda-time">11:00 AM - 11:25 AM </h4>
 					<h4 class="agenda-event">Connecting Google Deep Mind to SAP Applications</h4>
 					<h5 class="agenda-location  agenda-location2">small dive</h5>
-					<h5 class="agenda-person">Alex Schaefer / Rene Springer</h5>
+					<h5 class="agenda-person">Alex Schaefer / Ren&#233; Springer</h5>
 				</div>
 				<div class="agenda-content">
 					<h4 class="agenda-time">11:30 AM - 12:00 PM </h4>
