--- a/index.html
+++ b/index.html
@@ -389,10 +389,11 @@ $(document).ready(function(){
 			<p class="lunch-content">12:00 PM - 12:25 PM<br><span class="keynote">Caf&#233;s 1, 3 & 8</span></p>
 
 			<h4 class="lunch-keynote">&mdash;  Keynote &mdash;</h4>
-			<p class="lunch-content">12:30 PM - 1:15 PM<br><span class="keynote">Slack in the Enterprise</span></p>
+			<p class="lunch-content">12:30 PM - 1:15 PM @ Library<br><span class="keynote">Slack in the Enterprise</span></p>
 			
 			<h4 class="lunch-keynote">&mdash;  Blue Bottle Coffee &mdash;</h4>
-			<p class="lunch-content">1:30 PM - 3:00 PM<br><span class="keynote">HanaHaus will be hosting a pop-up caf&#233; throughout the afternoon.</span></p>
+			<p class="lunch-content">1:30 PM - 3:00 PM<br><span class="keynote">HanaHaus will be hosting a pop-up caf&#233; throughout the afternoon.</span><br>
+			<span style="color:#ED8922">Text our pilot chatbot at <span style="font-weight:700; color:#24B6EA">(650) 285-5047</span> to order a coffee.</span></p>
 
 			</div>
 
@@ -420,7 +421,7 @@ $(document).ready(function(){
 			<!-- <div class="col-md-2"></div> -->
 			<div class="col-sm-6 col-xs-12 agenda-column">
 				<div class="agenda-content">
-					<h4 class="agenda-time">1:30 - 1:55 PM </h4>
+					<h4 class="agenda-time">1:30 PM - 1:55 PM </h4>
 					<h4 class="agenda-event">Disruptive Technologies and Current Trends in Silicon Valley </h4>
 					<h5 class="agenda-location agenda-location2">small dive</h5>
 					<h5 class="agenda-person">Till Pieper</h5>
@@ -553,7 +554,14 @@ $(document).ready(function(){
 </div>
 
 <div class="row">
+		<div class="col-md-2 col-sm-2 col-xs-2">
+		</div>
 		<div class="col-md-4 col-sm-4 col-xs-4">
+				<div class="speaker-container">
+						<img src="assets/head_piyush.jpg" class="speaker-img img-responsive">
+						<h4 class="speaker-name">Piyush Chandra</h4>
+						<h5 class="speaker-title"><span class="speaker-position">Product & Design Team, ICSV</span><br><span class="speaker-session"></span></h5>
+			</div>
 		</div>
 		<div class="col-md-4 col-sm-4 col-xs-4">
 				<div class="speaker-container">
