fix small errors like time

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ $(document).ready(function(){
 					<h5 class="agenda-person">Wafaa Sabil & Team</h5>
 				</div>
 				<div class="agenda-content">
-					<h4 class="agenda-time">11:30 AM - 12:00 PM </h4>
+					<h4 class="agenda-time">11:30 AM - 11:55 AM </h4>
 					<h4 class="agenda-event">Doing the Boring Stuff Can Actually Bring Money - Learn how SAP's Machine Learning Platform and Application Help Create the Intelligent Enterprise</h4>
 					<h5 class="agenda-location  agenda-location2">small dive</h5>
 					<h5 class="agenda-person">Peter Weigt, Piyush Chandra</h5>
@@ -365,7 +365,7 @@ $(document).ready(function(){
 			<div class="col-sm-6 col-xs-12 agenda-column">
 				<h3 class="agenda-title">@ Library</h3>
 				<div class="agenda-content">
-					<h4 class="agenda-time">10:00 AM - 11:00 AM </h4>
+					<h4 class="agenda-time">10:00 AM - 10:55 AM </h4>
 					<h4 class="agenda-event">ML101: Is Machine Learning Controlling Your Life?</h4>
 					<h5 class="agenda-location  agenda-location2">small dive</h5>
 					<h5 class="agenda-person">Karsten Schmidt, Frank Blechschmidt</h5>
@@ -377,7 +377,7 @@ $(document).ready(function(){
 					<h5 class="agenda-person">Alex Schaefer / Ren&#233; Springer</h5>
 				</div>
 				<div class="agenda-content">
-					<h4 class="agenda-time">11:30 AM - 12:00 PM </h4>
+					<h4 class="agenda-time">11:30 AM - 11:55 AM </h4>
 					<h4 class="agenda-event">The User Experience Approach when Designing Machine Learning Applications</h4>
 					<h5 class="agenda-location  agenda-location2">small dive</h5>
 					<h5 class="agenda-person">Sajid Saiyed, Lucia Melgarejo, Shae Maeda</h5>
@@ -434,7 +434,7 @@ $(document).ready(function(){
 				</div>
 				<div class="agenda-content">
 					<h4 class="agenda-time">2:30 PM - 2:55 PM</h4>
-					<h4 class="agenda-event">Where Will Deep Learning Take Up with Enterprise Applications?</h4>
+					<h4 class="agenda-event">Where Will Deep Learning Take Us with Enterprise Applications?</h4>
 					<h5 class="agenda-location agenda-location2">small dive</h5>
 					<h5 class="agenda-person">Judith Li</h5>
 				</div>
