add second speaker

--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@ $(document).ready(function(){
 <div id="featured" class="section">
 <div class="row">
 	
-		<h1 class="title"><span class="keyword-featured">featured</span> speaker</span></h1>
+		<h1 class="title"><span class="keyword-featured">featured</span> speakers</span></h1>
 
-		<div class="col-sm-12 col-xs-12">
+		<div class="col-sm-12 col-xs-12 featured-speaker">
 		<div class="col-md-2"></div>
 		<div class="col-sm-6 col-md-4">
 			<img src="assets/don.jpg" class="speaker-img img-responsive featured-img">
@@ -310,6 +310,19 @@ $(document).ready(function(){
 			<h3 class="featured-name">Don Goodman-Wilson</h3>
 			<img src="assets/slack_logo.png" class="featured-company">
 			<p class="featured-content">Don Goodman-Wilson is a Senior Developer Advocate on the Developer Relations team at Slack. He loves living in the interfaces between layers, whether it's bridging languages, systems, or developers. Prior to hacking on Slack's Platform, Don has worked with streaming media, embedded hardware, the model railroading industry, and academic philosophy. He enjoys statically typed languages and sailing, and lives with his wife and daughter in California.</p>
+		</div>
+			</div>
+
+		<div class="col-sm-12 col-xs-12 featured-speaker">
+		<div class="col-md-2"></div>
+		<div class="col-sm-6 col-md-4">
+			<img src="assets/todd.jpg" class="speaker-img img-responsive featured-img">
+		</div>
+
+		<div class="col-sm-6 col-md-6">
+			<h3 class="featured-name">Todd Herskovitz</h3>
+			<img src="assets/slack_logo.png" class="featured-company">
+			<p class="featured-content">Todd Herskovitz manages global technology partnerships at Slack; prior to Slack, he worked on strategic partnerships at Google. He likes helping transform how large global companies communicate, and enjoys riding motorcycles and cooking in his free time.</p>
 		</div>
 			</div>
 </div>
